# TEMP-c2pa-crypto

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml
examples/: data_hash.rs  show.rs  v2api.rs  v2show.rs
examples/client/: client.rs
make_test_images/: Cargo.toml
sdk/: Cargo.toml
sdk/src/: cose_sign.rs  cose_validator.rs  lib.rs  store.rs  trust_handler.rs
sdk/src/openssl/: mod.rs  openssl_trust_handler.rs
sdk/src/utils/: test.rs
src/: assertion.rs  asset_io.rs  builder.rs  callback_signer.rs  claim.rs  claim_generator_info.rs  cose_sign.rs  cose_validator.rs  error.rs  external_manifest.rs  hashed_uri.rs  ingredient.rs  jumbf_io.rs  lib.rs  manifest.rs  manifest_assertion.rs  manifest_store.rs  manifest_store_report.rs  ocsp_utils.rs  reader.rs  resource_store.rs  salt.rs  settings.rs  signer.rs  signing_alg.rs  status_tracker.rs  store.rs  time_stamp.rs  trust_handler.rs  validation_status.rs
src/asn1/: rfc5652.rs
src/assertions/: actions.rs  bmff_hash.rs  box_hash.rs  creative_work.rs  data_hash.rs  exif.rs  ingredient.rs  labels.rs  metadata.rs  mod.rs  schema_org.rs  thumbnail.rs
src/asset_handlers/: bmff_io.rs  c2pa_io.rs  jpeg_io.rs  mod.rs  pdf.rs  png_io.rs  riff_io.rs  svg_io.rs  tiff_io.rs
src/internal/: base64.rs  hash_utils.rs  mod.rs
src/internal/asn1/: rfc3161.rs
src/jumbf/: boxes.rs  labels.rs
src/openssl/: ec_signer.rs  ec_validator.rs  ed_signer.rs  ed_validator.rs  ffi_mutex.rs  mod.rs  openssl_trust_handler.rs  rsa_signer.rs  rsa_validator.rs  temp_signer.rs  temp_signer_async.rs
src/tests/: cose_validator.rs  mod.rs  test_utils.rs  trust_handler.rs
src/tests/fixtures/: mod.rs
src/tests/internal/: mod.rs
src/tests/internal/asn1/: rfc3161.rs
src/tests/openssl/: ec_signer.rs  ec_validator.rs  ed_signer.rs  ed_validator.rs  mod.rs  openssl_trust_handler.rs  rsa_signer.rs
src/tests/trust_config/: mod.rs  trust_config_handler.rs
src/tests/wasm/: mod.rs  rsa_wasm_signer.rs  webcrypto_validator.rs  webpki_trust_handler.rs
src/trust_config/: mod.rs  trust_pass_through.rs
src/utils/: cbor_types.rs  hash_utils.rs  merkle.rs  mime.rs  mod.rs  patch.rs  test.rs  thumbnail.rs  time_it.rs
src/wasm/: hash_by_alg.rs  mod.rs  rsa_wasm_signer.rs  util.rs  webcrypto_validator.rs  webpki_trust_handler.rs
tests/: integration.rs  test_builder.rs  test_reader.rs  v2_api_integration.rs
tests/common/: compare_readers.rs  mod.rs  test_signer.rs
